syntax="proto3";
package driver;

option go_package = ".;proto";

message DriverLocationRequest {
    string location = 1;
}

message DriverLocation {
  string driverID = 1;
  string location = 2;
}

message DriverLocationResponse {
  repeated DriverLocation locations = 1;
}

service DriverService {
  rpc FindNearest(DriverLocationRequest) returns (DriverLocationResponse);
}
